# index-simulation-tool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  integration-test.yml  unit-test.yml
benches/: bench.rs
scripts/: .gitignore  plot_combined.py  plot_index.py  plot_indexes.py  plot_real_world_indexes.py  sparse.py  splade.py  tf_idf.py
src/: kmeans.rs  lib.rs  main.rs  test_utils.rs
src/benchmark/: logger.rs  measure_macro.rs  metrics.rs  mod.rs
src/benchmark/macros/: measure_system.rs  measure_time.rs  mod.rs
src/data/: generator.rs  generator_dense.rs  generator_sparse.rs  mod.rs  ms_marco.rs  pca.rs  plot.rs  sift.rs  tsne.rs  vector.rs
src/data_structures/: min_heap.rs
src/index/: linscan.rs  mod.rs  naive.rs  neighbor.rs
src/index/annoy/: mod.rs
src/index/hnsw/: construction.rs  mod.rs  neighbor.rs  node.rs  search.rs
src/index/ivfpq/: mod.rs
src/index/linscan/: mod.rs  single_threaded.rs
src/index/lsh/: minhash.rs  mod.rs  simhash.rs
src/index/minhash/: mod.rs
src/index/nsw/: mod.rs
src/index/pq/: mod.rs
src/index/simhash/: mod.rs
src/index/ssg/: construction.rs  mod.rs  prune.rs  search.rs
src/query/: hnsw.rs  mod.rs  naive.rs  range.rs
tests/: integration_test.rs
