[package]
name = "index-simulation-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
nalgebra = "0.32.6"
ordered-float = { version = "4.2.0", features = ["serde"] }
plotly = "0.8.4"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
sprs = "0.11.1"
sysinfo = "0.30.11"
tokio = { version = "1.37.0", features = ["full"] }
